--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,12 @@ android {
 }
 
 dependencies {
+    // Stripe
     implementation 'com.stripe:stripe-android:20.25.1'
     implementation 'com.android.volley:volley:1.2.1'
+    // Revolut Pay
+    implementation 'com.revolut:revolutpayments:1.0.0'
+    implementation 'com.revolut:revolutpay:2.1'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
