--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,17 @@ plugins {
     id 'com.android.application'
 }
 
+def apikeyProperties = new Properties()
+if(rootProject.file("app/keys.properties").exists()){
+    apikeyProperties.load(rootProject.file("app/keys.properties").newDataInputStream())
+}
+
+
 android {
+    buildFeatures {
+        buildConfig = true
+    }
+
     namespace 'com.example.stripepayments'
     compileSdk 33
 
@@ -14,6 +24,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "REVOLUT_API_URL", apikeyProperties['REVOLUT_API_URL'])
+        buildConfigField("String", "REVOLUT_MERCHANT_API_KEY", apikeyProperties['REVOLUT_MERCHANT_API_KEY'])
+        buildConfigField("String", "STRIPE_API_URL", apikeyProperties['STRIPE_API_URL'])
+        buildConfigField("String", "STRIPE_AUTH_KEY", apikeyProperties['STRIPE_AUTH_KEY'])
     }
 
     buildTypes {
