--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     defaultConfig {
         applicationId "com.example.stripepayments"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -49,6 +49,8 @@ dependencies {
     // Revolut Pay
     implementation 'com.revolut:revolutpayments:1.0.0'
     implementation 'com.revolut:revolutpay:2.1'
+    // Handpoint
+    implementation project(path: ':payment')
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
