--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StripePayments"
-        tools:targetApi="31">
+        tools:targetApi="25">
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:theme="@style/DemoTheme"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
