--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
         buildConfigField("String", "REVOLUT_MERCHANT_API_KEY", apikeyProperties['REVOLUT_MERCHANT_API_KEY'])
         buildConfigField("String", "STRIPE_API_URL", apikeyProperties['STRIPE_API_URL'])
         buildConfigField("String", "STRIPE_AUTH_KEY", apikeyProperties['STRIPE_AUTH_KEY'])
+        resValue "string", "REVOLUT_MERCHANT_API_KEY", apikeyProperties['REVOLUT_MERCHANT_API_KEY']
     }
 
     buildTypes {
@@ -48,14 +49,18 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     // Revolut Pay
     implementation 'com.revolut:revolutpayments:1.0.0'
-    implementation 'com.revolut:revolutpay:2.1'
+    implementation 'com.revolut:revolutpay:2.2'
     // Handpoint
     implementation project(path: ':payment')
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+
 }
