--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission-sdk-23 android:name="android.permission.LOCATION_HARDWARE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,35 +15,39 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StripePayments"
+        android:theme="@style/DemoTheme"
         tools:targetApi="25">
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/DemoTheme"
-            android:launchMode="singleTop">
+            android:name=".StartScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
                 <data
                     android:host="host"
                     android:scheme="scheme1" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MerchantKeyScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:host="host"
-                    android:scheme="scheme2" />
             </intent-filter>
-
         </activity>
     </application>
-    <queries>
-        <package android:name="com.revolut.revolut" />
-    </queries>
+
 </manifest>
