--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 def apikeyProperties = new Properties()
 if(rootProject.file("app/keys.properties").exists()){
-    apikeyProperties.load(rootProject.file("app/keys.properties").newDataInputStream())
+    apikeyProperties.load(rootProject.file("app/keysSandbox.properties").newDataInputStream())
 }
 
 
